fixed: gap

--- a/blocks/places/__head/places__head.css
+++ b/blocks/places/__head/places__head.css
@@ -14,6 +14,6 @@
 
 @media (max-width: 1024px) {
     .places__head{
-        grid-gap: 0 10px;
+        grid-gap: 0 25px;
     }
 }
